--- a/contact.html
+++ b/contact.html
@@ -151,7 +151,8 @@
 			<div class="contact-about">
 				<div class="contact-head"><i class="fas fa-mobile-alt contact-fa"></i> Mobile Number:</div>
 				<div class="contact-info">
-					<a href="tel:+919137600428" class="contact-call">+91 9137600428</a><br>
+					<a href="tel:+917507309867" class="contact-call">+91 7507309867</a><br>
+					<a href="tel:+917620338113" class="contact-call">+91 7620338113</a><br>
 					<a href="https://wa.me/917507309867" class="btn btn-outline-success btn-sm whatsapp-button">Click to chat on WhatsApp</a>
 				</div>
 				<div class="contact-head"><i class="far fa-envelope contact-fa"></i> Email Address:</div>
@@ -198,7 +199,7 @@
 					</div>
 					<div class="row footer-left">
 						<div class="col-2 text-center"><i class="fas fa-mobile-alt"></i></div>
-						<div class="col-10 footer-contact">+91 9137600428</div>
+						<div class="col-10 footer-contact">+91 7507309867<br>+91 7620338113</div>
 					</div>
 					<div class="row footer-left">
 						<div class="col-2 text-center"><i class="far fa-envelope"></i></div>
