--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 		<h3 class="banner-tagline text-center"><i>...Feel the Freshness</i></h3>
 		<h4 class="text-center banner-text">We sell over wide range of different fruits and vegetables!</h4>
 		<div class="text-center call-button">
-			<a class="btn btn-danger text-white calling-button" href="tel:+919137600428">Click to Call Us Now at +91 9137600428</a>
+			<a class="btn btn-danger text-white calling-button" href="tel:+917507309867">Click to Call Us Now at +91 7507309867</a>
 		</div>
 		<div class="text-center banner-btn">
 			<a href="products.html" class="banner-btn2">View Our Products</a>
@@ -221,7 +221,7 @@
 					</div>
 					<div class="row footer-left">
 						<div class="col-2 text-center"><i class="fas fa-mobile-alt"></i></div>
-						<div class="col-10 footer-contact">+91 9137600428</div>
+						<div class="col-10 footer-contact">+91 7507309867<br>+91 7620338113</div>
 					</div>
 					<div class="row footer-left">
 						<div class="col-2 text-center"><i class="far fa-envelope"></i></div>
