--- a/products.html
+++ b/products.html
@@ -156,7 +156,7 @@
 <h2 class="text-center topic-products">Our Products</h2>
 
 <div class="text-center call-button">
-    <a class="btn btn-sm btn-danger text-white calling-button" href="tel:+919137600428">Click to Call Us Now at +91 9137600428</a>
+    <a class="btn btn-sm btn-danger text-white calling-button" href="tel:+917507309867">Click to Call Us Now at +91 7507309867</a>
 </div>
 
 <br>
@@ -567,7 +567,7 @@
 					</div>
 					<div class="row footer-left">
 						<div class="col-2 text-center"><i class="fas fa-mobile-alt"></i></div>
-						<div class="col-10 footer-contact">+91 9137600428</div>
+						<div class="col-10 footer-contact">+91 7507309867<br>+91 7620338113</div>
 					</div>
 					<div class="row footer-left">
 						<div class="col-2 text-center"><i class="far fa-envelope"></i></div>
