--- a/about.html
+++ b/about.html
@@ -211,7 +211,7 @@
 </div>
 
 <div class="text-center call-button">
-	<a class="btn btn-danger text-white" href="tel:+919137600428">Click to Call Us Now at +91 9137600428</a>
+	<a class="btn btn-danger text-white" href="tel:+917507309867">Click to Call Us Now at +91 7507309867</a>
 </div>	
 
 
@@ -292,7 +292,7 @@
 					</div>
 					<div class="row footer-left">
 						<div class="col-2 text-center"><i class="fas fa-mobile-alt"></i></div>
-						<div class="col-10 footer-contact">+91 9137600428</div>
+						<div class="col-10 footer-contact">+91 7507309867<br>+91 7620338113</div>
 					</div>
 					<div class="row footer-left">
 						<div class="col-2 text-center"><i class="far fa-envelope"></i></div>
