--- a/contact.html
+++ b/contact.html
@@ -121,23 +121,23 @@
 <div class="container contact-set">
 	<div class="row">
 		<div class="col-lg-6 col-sm-12">
-			<form class="ev_form" autocomplete="off">
+			<form class="ev_form" autocomplete="off" method="POST" action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSdzAFN_NYgimJpe5bAEU-5AZSDdzZWBvl-DdiyVN0HVKMhvjw/formResponse">
                 <div class="form-group">
                     <div class="form-required-show">
                         <span class="form-required">* is for required.</span>
                     </div>
                     <label for="name">Name<span class="form-required"> *</span></label>
-                    <input type="text" id="name" class="form-control" placeholder="Enter Your Name" autocomplete="off" required></br>
+                    <input type="text" id="name" class="form-control" placeholder="Enter Your Name" name="entry.263232790" autocomplete="off" required></br>
                     <label for="number">Mobile Number<span class="form-required"> *</span></label>
-                    <input type="tel" id="number" class="form-control" placeholder="Enter Your Mobile number" autocomplete="off" required>
+                    <input type="tel" id="number" name="entry.1434646182" class="form-control" placeholder="Enter Your Mobile number" autocomplete="off" required>
                 	<small class="form-text text-muted"> We'll never share your mobile number with anyone else.</small>
                 	</br>
                     <label for="email">Email Address</label>
-                    <input type="email" id="email" class="form-control" placeholder="Enter Your Email" autocomplete="off">
+                    <input type="email" id="email" name="entry.1202106825" class="form-control" placeholder="Enter Your Email" autocomplete="off">
                     <small class="form-text text-muted"> We'll never share your email with anyone else.</small>
                     </br>
                     <label for="message">Message</label><br>
-                    <textarea id="message" class="form-control txt-area" placeholder="Type your message here"></textarea>
+                    <textarea name="entry.1537792009" id="message" class="form-control txt-area" placeholder="Type your message here"></textarea>
                     <br>
 
 
@@ -231,8 +231,8 @@
 					<p class="footer-right">
 						By subscribing to our mailing list you will always get latest offers and updates from us.
 						<br>
-						<form class="text-center footer-form">
-							<input type="text" name="" class="footer-input" placeholder="Type your email or number" required><button type="submit" class="btn footer-button"><i class="far fa-paper-plane"></i></button>
+						<form class="text-center footer-form" method="POST" action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSeJRVKul_Ixgi5vMOxCUcuxvGAGdIRdxBlxY8Wko-qDuI-PQA/formResponse">
+							<input type="text" name="entry.1873482848" class="footer-input" placeholder="Type your email or number" required><button type="submit" class="btn footer-button"><i class="far fa-paper-plane"></i></button>
 						</form>
 					</p>
 					<p class="credits">
