--- a/products.html
+++ b/products.html
@@ -599,9 +599,9 @@
 					<p class="footer-right">
 						By subscribing to our mailing list you will always get latest offers and updates from us.
 						<br>
-						<form class="text-center footer-form">
-							<input type="text" name="" class="footer-input" placeholder="Type your email or number" required><button type="submit" class="btn footer-button"><i class="far fa-paper-plane"></i></button>
-						</form>
+						<form class="text-center footer-form" method="POST" action="https://docs.google.com/forms/u/0/d/e/1FAIpQLSeJRVKul_Ixgi5vMOxCUcuxvGAGdIRdxBlxY8Wko-qDuI-PQA/formResponse">
+                            <input type="text" name="entry.1873482848" class="footer-input" placeholder="Type your email or number" required><button type="submit" class="btn footer-button"><i class="far fa-paper-plane"></i></button>
+                        </form>
 					</p>
 					<p class="credits">
                         Created by Abhishek Joshi (+919757468857)<br>for <a href="https://www.instagram.com/360digitalsol/" class="nihar">360 Digital Solutions <img class="digi-sol" src="images/digi_sol.jpg"></a>
