--- a/contact.html
+++ b/contact.html
@@ -215,7 +215,7 @@
 						Social Media Handles
 					</h3>
 					<p class="footer-mid">
-						We are always approachable to you on your most loved social media handles.<br>Our social media pages are regularly updated.<br>You can also place your orders by sending direct messages here.
+						We are also available for you on your most loved social media handles.<br>Our social media pages are regularly updated.<br>You can also place your orders by sending direct messages here.
 						<br>
 					</p>
 					<p>
