--- a/products.html
+++ b/products.html
@@ -583,9 +583,9 @@
 						Social Media Handles
 					</h3>
 					<p class="footer-mid">
-						We are always approachable to you on your most loved social media handles.<br>Our social media pages are regularly updated.<br>You can also place your orders by sending direct messages here.
-						<br>
-					</p>
+                        We are also available for you on your most loved social media handles.<br>Our social media pages are regularly updated.<br>You can also place your orders by sending direct messages here.
+                        <br>
+                    </p>
 					<p>
 						<a href="https://www.instagram.com/urjafarmeats/" class="button btn insta footer-social1"><i class="fab fa-instagram"></i> instagram</a>
 						<a href="https://www.facebook.com/Urja-Farm-Eats-108624907533208/" class="button btn fb footer-social2"><i class="fab fa-facebook-f"></i> facebook</a>
